@@ -5,6 +5,8 @@
     # Apps:
         * Emails :
             - These fields of 'EmailTemplate' cannot be inner-edited anymore: 'body', 'body_html'.
+        * SMS :
+            - The messaging lists are nox excluded correctly from the edition form of 'SMSCampaigns'.
 
 
 == Version 2.0.19 ==
